<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <!--    androidx.appcompat.widget.AppCompatButton을 사용한 이유 :
    버튼의 색상을 변경하기 위해서는 backgroundTint를 사용해야 하는데 그렇게 되면 xml로 정의한
    android:background="@drawable/circle_button" 사용이 불가능하다.
    ( xml 주석 단축키 : Ctrl + / )
    android:background="@android:color/transparent" 는 EditText의 밑줄에 투명 값을 대입
    Q. EditText 클릭시 키보드를 뜨지 않게 하려면 ? -->

    <TextView
        android:id="@+id/result"
        android:layout_width="154dp"
        android:layout_height="90dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:text="@string/result_zero"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textIsSelectable="true"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/point"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle_button"
        android:text="@string/point"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zero"
        android:onClick="numberEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/zero"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle_button"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="numberEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button"
        android:text="@string/one"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="numberEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/two"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button"
        android:text="@string/two"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintStart_toEndOf="@+id/one"
        android:onClick="numberEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/three"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button"
        android:text="@string/three"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintStart_toEndOf="@+id/two"
        android:onClick="numberEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/four"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button"
        android:text="@string/four"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="numberEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/five"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button"
        android:text="@string/five"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintStart_toEndOf="@+id/four"
        android:onClick="numberEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/six"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button"
        android:text="@string/six"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintStart_toEndOf="@+id/five"
        android:onClick="numberEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/seven"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button"
        android:text="@string/seven"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="numberEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/eight"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button"
        android:text="@string/eight"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintStart_toEndOf="@+id/seven"
        android:onClick="numberEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nine"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button"
        android:text="@string/nine"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintStart_toEndOf="@+id/eight"
        android:onClick="numberEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/equals"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle_button2"
        android:text="@string/equals"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/point"
        android:onClick="equalsEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plus"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button2"
        android:text="@string/plus"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/three"
        android:onClick="operatorEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minus"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button2"
        android:text="@string/minus"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/six"
        android:onClick="operatorEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/multiplication"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button2"
        android:text="@string/multiplication"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/nine"
        android:onClick="operatorEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/division"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button2"
        android:text="@string/division"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percent"
        android:onClick="operatorEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button3"
        android:text="@string/cancel"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="cancelEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plus_minus"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button3"
        android:text="@string/plus_minus"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        android:onClick="numberEvent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/percent"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_button3"
        android:text="@string/percent"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintStart_toEndOf="@+id/plus_minus"
        android:onClick="percentEvent"/>

</androidx.constraintlayout.widget.ConstraintLayout>